--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'Azzinoth'
 include 'azzinoth-barrier'
-include 'azzinoth-plugin-es'
 include 'azzinoth-common'
+include 'azzinoth-service-es'
+include 'azzinoth-web'
 
