--- a/azzinoth-service-es/build.gradle
+++ b/azzinoth-service-es/build.gradle
@@ -1,5 +1,6 @@
 
 dependencies {
     compile group: 'org.elasticsearch.client', name: 'transport', version: '5.2.2'
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile project(':azzinoth-common')
 }
