--- a/azzinoth-agent/build.gradle
+++ b/azzinoth-agent/build.gradle
@@ -2,18 +2,8 @@
 
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'idea'
-
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
 
 jar {
     manifest {
@@ -23,3 +13,17 @@ jar {
         attributes 'Can-Retransform-Classes': 'true'
     }
 }
+
+dependencies {
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
