--- a/azzinoth-common/build.gradle
+++ b/azzinoth-common/build.gradle
@@ -1,4 +1,18 @@
-dependencies{
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+
+dependencies {
     compile group: 'org.springframework', name: 'spring-aspects', version: '4.3.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.9.RELEASE'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
