--- a/azzinoth-core/build.gradle
+++ b/azzinoth-core/build.gradle
@@ -1,4 +1,3 @@
-version 'unspecified'
 
 apply plugin: 'java'
 
@@ -8,10 +7,20 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     dependencies { compile fileTree(dir:'libs',include:['*.jar'])}
     compile group: 'org.ow2.asm', name: 'asm', version: '5.2'
     compile group: 'org.ow2.asm', name: 'asm-commons', version: '5.2'
     compile group: 'org.ow2.asm', name: 'asm-util', version: '5.2'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
