--- a/azzinoth-web/build.gradle
+++ b/azzinoth-web/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'war'
+
+
 dependencies {
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-aop', version: '4.3.9.RELEASE'
@@ -21,4 +23,15 @@ dependencies {
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.9.RELEASE'
     compile project(':azzinoth-barrier')
     compile project(':azzinoth-service-es')
+
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
